# app.py
@@ -1,7 +1,7 @@
 from flask import Flask, render_template,jsonify, request
 import flask
 import connexion
-from flask_cors import CORS
+from flask_cors import CORS,  cross_origin
 from flask_jwt_extended import (
     JWTManager, jwt_required, create_access_token,
     get_jwt_identity, get_jwt_claims
@@ -11,7 +11,8 @@ import jwt as JWT
 
 
 def decode_token(token):
-    ret = JWT.decode(token, '69', algorithms=['HS256'])
+    print(token.split("'")[1])
+    ret = JWT.decode(token.split("'")[1], '69', algorithms=['HS256'])
     print(ret)
     return ret
 
@@ -19,6 +20,7 @@ def decode_token(token):
 # create application instance
 myapp = connexion.App(__name__, specification_dir="./")
 myapp.app.config['JWT_SECRET_KEY'] = '69'
+myapp.app.config['CORS_HEADERS'] = 'Content-Type'
   # Change this!
 jwt = JWTManager(myapp.app)
 # read swagger.yml to configure endpoints
@@ -28,19 +30,8 @@ myapp.add_api('swagger.yml')
 CORS(myapp.app)
 
 
-@jwt.user_claims_loader
-def add_claims_to_access_token(user):
-    return {'user_id': user.id}
-
-
-@jwt.user_identity_loader
-def user_identity_lookup(user):
-    return user.username
-
-
-
-
 @myapp.route('/')
+@cross_origin(origin='*', headers=['Content- Type', 'Authorization'])
 def home():
     """
             This function just responds to the browser ULR
@@ -49,7 +40,6 @@ def home():
             :return:        the rendered template 'home.html'
             """
     return render_template("home.html")
-
 
 
 # if we are running in stand alone mode, run the application
